# acceptability-engine

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  compose.yaml
core/: Cargo.toml  deny.toml
core/migrations/: 0001_core_tables.sql  0002_gate_runs.sql  0003_evidence_bundles.sql  0004_query_indexes.sql  0005_rebuild_attempts_with_numbers.sql  0006_migrate_legacy_gate_runs.sql  0007_rebuild_evidence_bundles.sql  0008_security_trust.sql  0009_review_decisions.sql  0010_admission_policy.sql  0011_candidate_identity.sql
core/src/: contract.rs  main.rs  policy.rs  progress.rs  sandbox_profile.rs  workspace.rs  workspace_mode.rs
core/src/error/: contract.rs  gate.rs  git.rs  mod.rs  orchestrator.rs  process.rs  store.rs  validation.rs
core/src/gates/: gate01_contract.rs  gate02_workspace.rs  gate03_boundary.rs  gate04_formatting.rs  gate05_static_checks.rs  gate06_build.rs  gate07_tests.rs  gate08_supply_chain.rs  mod.rs  process.rs  resource_limits.rs  runner.rs  sandbox.rs  sandbox_runner.rs
core/src/gates/result/: execution.rs  mod.rs
core/src/orchestrator/: evidence_artifacts.rs  mod.rs  state_machine.rs
core/src/server/: handlers.rs  health.rs  mod.rs  progress_ws.rs  state.rs  telemetry.rs  worker.rs
core/src/store/: artifact_retention.rs  artifacts.rs  attempt_reads.rs  audit.rs  clock.rs  connection.rs  evidence.rs  evidence_reads.rs  final_decisions.rs  gate_records.rs  health.rs  mappers.rs  mod.rs  policy_evaluations.rs  queries.rs  replay.rs  review_decisions.rs  runs.rs  schema.rs  transaction.rs  types.rs
(+58 files in other folders)
