[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
axum = { version = "0.7.5", features = ["ws"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
wait-timeout = "0.2.0"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.24"
